Fixed singlePlayer jumping! Next, clean up old bits of comments, streamline chooseCheatMode(), and merge with master.

--- a/projects/pong/index.css
+++ b/projects/pong/index.css
@@ -35,7 +35,7 @@ body {
 
   /* positioning */
   left: 50px;
-  top: 180px;
+  top: 200px;
 }
 
 #paddleRight {
@@ -44,8 +44,8 @@ body {
   box-shadow: 0px 0px 0px 3px maroon inset;
 
   /* positioning */
-  left: 630px;
-  top: 180px;
+  left: 680px;
+  top: 200px;
 }
 
 .balls {
@@ -57,8 +57,8 @@ body {
   text-align: center;
   
   /* positioning */
-  left: 340px;
-  top: 210px;
+  left: 365px;
+  top: 230px;
 }
 
 .ballPit {
@@ -73,8 +73,8 @@ body {
   background-color: fuchsia;
   
   /* positioning */
-  left: 340px;
-  top: 210px;
+  left: 365px;
+  top: 230px;
 }
 
 /* #cheatIcon {
